# gismol_t_toolkit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  License  README.md  pyproject.toml  requirements.txt  setup.py
docs/: gismol-t-version-api.md  gismol-t-version-tutotial.md
examples/five-complete/: autonomous-mars-rover.py  five-complete-modelling.md  personalized-adaptive-learning.py  predictive-maintenance.py  social-welfare-allocation.py  supply-chain-optimizer.py
examples/five-minimals/: adamptive-cruise-control.py  autonomous-vacuum-cleaner.py  five-minimal-modelling.md  simple-dialogue-agent.py  smart-thermostat.py  stock-trading-agent.py
gismol/core/: __init__.py  coh_object.py  constraints.py  daemons.py  exceptions.py  repository.py
gismol/neural/: __init__.py  components.py  embeddings.py  nn.py  optimizers.py
gismol/nlp/: __init__.py  chat_manager.py  chat_module.py  constraint_parser.py  embedders.py  entity_extractor.py  intent_recognizer.py  normalizers.py  parsers.py  relations_miner.py  response_generator.py  similarity.py  text_to_coh.py  validation.py
gismol/reasoners/: __init__.py  advanced.py  base.py  domain.py  general.py
